<!--
 Dimensions for each drawable folder = 
(same as ic_launcher)
48x48 = mdpi
72x72 = hdpi
96x96 = xhdpi

Minimum screen size for background images = 
normal screens are at least 470dp x 320dp (mdpi)
large screens are at least 640dp x 480dp (hdpi)
xlarge screens are at least 960dp x 720dp (xhdpi)

-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_image"
    tools:context=".MainActivity" >

<RelativeLayout
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

<TextView
        android:id="@+id/TVtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
         android:textSize="45sp"
        android:textColor="#FFFFFF"
        android:text="@string/game_name" />    
    
    <Button
         android:id="@+id/BTNstart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/BTNhighscores"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:onClick="startLv1"
         android:text="@string/start"
         android:textStyle="bold"
         android:textSize="20sp"
         android:background="@drawable/nova" />
    
    <Button
        android:id="@+id/BTNhighscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="startLv1"
        android:text="@string/highscores"
        android:textStyle="bold"
        android:textSize="12sp"
        android:background="@drawable/bluestar" />    

     <Button
         android:id="@+id/BTNoptions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/BTNhighscores"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:onClick="startLv1"
         android:text="@string/options"
         android:textStyle="bold"
         android:textSize="12sp"
         android:background="@drawable/bluestar" />

</RelativeLayout>
    

</LinearLayout>